hide toolbar, now works on iphone. need to now fix widths

--- a/assets/stylesheets/animation.css
+++ b/assets/stylesheets/animation.css
@@ -19,7 +19,7 @@
 }
 
 body > section {
-  -webkit-transition: .1s all linear;
+  -webkit-transition: .2s all linear;
 }
 
 .out {
